src/test/resources/lab2-samples/bad3.out

*** Error line 6.
  a = ReadInteger();
  ^
*** syntax error

