src/test/resources/lab2-samples/bad3.decaf
void main() {
  int a;

  a = 5;
  Print(a)
  a = ReadInteger();
}
